feat(jdk25): support list endpoint interface calls